# USB-SecurityVault

./: .gitignore  .prettierignore  .prettierrc  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: README.md  generate-ico-sharp.js  generate-ico.js  write-placeholder-ico.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  error.rs  lib.rs  main.rs  security.rs  storage.rs  totp.rs  vault.rs
src/@types/: tauri__api__clipboard.d.ts
src/app/: App.tsx  main.tsx
src/modules/auth/: AuthPage.tsx
src/modules/dashboard/: DashboardPage.tsx
src/modules/finance/: FinancePage.tsx
src/modules/passwords/: GroupTablePage.tsx  GroupsPage.tsx
src/shared/: App.css  api.ts  clipboard.ts  iconAssets.ts  theme.ts  types.ts
src/shared/components/: BrandMark.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  PageShell.tsx  Starfield.tsx
src/shared/hooks/: useAutoLock.ts
tools/encrypt-icons/: Cargo.toml
tools/encrypt-icons/src/: main.rs
tools/usb-backup/: Cargo.toml
tools/usb-backup/src/: main.rs
usb-dist/: Abrir Vault.bat  autorun.inf
