[package]
name = "encrypt-icons"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rpassword = "7"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }
